Bare bones drop down form

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
       <h1>Today I Learned!!</h1>
     </header>
 
+    <form>
+      <input type="text" />
+      <input type="text" />
+      <select>
+        <option>Pop culture</option>
+        <option>History</option>
+        <option>Geography</option>
+        <option>Business</option>
+      </select>
+    </form>
+
     <main>
       <aside>
         <ul>
