--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
     </header>
 
     <form>
-      <input type="text" />
-      <input type="text" />
+      <input type="text" placeholder="Share a fact..." />
+      <span>200</span>
+      <input type="text" placeholder="Source" />
       <select>
-        <option>Pop culture</option>
-        <option>History</option>
-        <option>Geography</option>
-        <option>Business</option>
+        <option value="">Choose Category</option>
+        <option value="popculture">Pop culture</option>
+        <option value="history">History</option>
+        <option value="geography">Geography</option>
+        <option value="business">Business</option>
+        <option value="technology">Technology</option>
       </select>
+      <button>Post</button>
     </form>
 
     <main>
@@ -40,6 +44,9 @@
           </li>
           <li>
             <button>Business</button>
+          </li>
+          <li>
+            <button>Technology</button>
           </li>
         </ul>
       </aside>
