Added space between logo+name and share a fact button in the header

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 
     <link href="style.css" rel="stylesheet" />
     <title>Today I learned!</title>
-    <button>Share a fact</button>
   </head>
   <body>
     <header class="header">
-      <img src="logo.png" height="68" width="68" alt="Today I learned logo" />
-      <h1>Today I Learned!!</h1>
+      <div class="logo">
+        <img src="logo.png" height="68" width="68" alt="Today I learned logo" />
+        <h1>Today I Learned!!</h1>
+      </div>
+      <button>Share a fact</button>
     </header>
 
     <form class="fact-form">
