--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
 
       <section>
         <ul>
-          <li>
-            <p class="fact">
+          <li class="fact">
+            <p>
               React is being developed by Meta (formerly facebook)
               <a href="https://opensource.fb.com/" target="_blank">
                 (Source)
               </a>
-              <span class="tag" style="background-color: red">
-                #technology#
-              </span>
             </p>
+            <span class="tag" style="background-color: red">
+              #technology#
+            </span>
           </li>
-          <li>
-            <p class="fact">
+          <li class="fact">
+            <p>
               Millennial dads spend 3 times as much time with their kids than
               their fathers spent with them. In 1982, 43% of fathers had never
               changed a diaper. Today, that number is down to 3%
@@ -87,10 +87,8 @@
               >
                 (Source)
               </a>
-              <span class="tag" style="background-color: yellow">
-                #society#
-              </span>
             </p>
+            <span class="tag" style="background-color: blue"> #society# </span>
           </li>
         </ul>
         <p>Built by Adviti Mishra</p>
