--- a/index.html
+++ b/index.html
@@ -16,83 +16,92 @@
     <title>Today I learned!</title>
   </head>
   <body>
-    <header class="header">
-      <div class="logo">
-        <img src="logo.png" height="68" width="68" alt="Today I learned logo" />
-        <h1>Today I Learned!!</h1>
-      </div>
-      <button>Share a fact</button>
-    </header>
+    <div class="container">
+      <header class="header">
+        <div class="logo">
+          <img
+            src="logo.png"
+            height="68"
+            width="68"
+            alt="Today I learned logo"
+          />
+          <h1>Today I Learned!!</h1>
+        </div>
+        <button>Share a fact</button>
+      </header>
 
-    <form class="fact-form">
-      <input type="text" placeholder="Share a fact..." />
-      <span>200</span>
-      <input type="text" placeholder="Source" />
-      <select>
-        <option value="">Choose Category</option>
-        <option value="popculture">Pop culture</option>
-        <option value="history">History</option>
-        <option value="geography">Geography</option>
-        <option value="business">Business</option>
-        <option value="technology">Technology</option>
-      </select>
-      <button>Post</button>
-    </form>
+      <form class="fact-form">
+        <input type="text" placeholder="Share a fact..." />
+        <span>200</span>
+        <input type="text" placeholder="Source" />
+        <select>
+          <option value="">Choose Category</option>
+          <option value="popculture">Pop culture</option>
+          <option value="history">History</option>
+          <option value="geography">Geography</option>
+          <option value="business">Business</option>
+          <option value="technology">Technology</option>
+        </select>
+        <button>Post</button>
+      </form>
 
-    <main class="main">
-      <aside>
-        <ul>
-          <li>
-            <button>All</button>
-          </li>
-          <li>
-            <button>Pop culture</button>
-          </li>
-          <li>
-            <button>History</button>
-          </li>
-          <li>
-            <button>Geography</button>
-          </li>
-          <li>
-            <button>Business</button>
-          </li>
-          <li>
-            <button>Technology</button>
-          </li>
-        </ul>
-      </aside>
+      <main class="main">
+        <aside>
+          <ul>
+            <li>
+              <button>All</button>
+            </li>
+            <li>
+              <button>Pop culture</button>
+            </li>
+            <li>
+              <button>History</button>
+            </li>
+            <li>
+              <button>Geography</button>
+            </li>
+            <li>
+              <button>Business</button>
+            </li>
+            <li>
+              <button>Technology</button>
+            </li>
+          </ul>
+        </aside>
 
-      <section>
-        <ul>
-          <li class="fact">
-            <p>
-              React is being developed by Meta (formerly facebook)
-              <a href="https://opensource.fb.com/" target="_blank">
-                (Source)
-              </a>
-            </p>
-            <span class="tag" style="background-color: red">
-              #technology#
-            </span>
-          </li>
-          <li class="fact">
-            <p>
-              Millennial dads spend 3 times as much time with their kids than
-              their fathers spent with them. In 1982, 43% of fathers had never
-              changed a diaper. Today, that number is down to 3%
-              <a
-                href="https://www.mother.ly/parenting/millennial-dads-spend-more-time-with-their-kids"
-                target="_blank"
-              >
-                (Source)
-              </a>
-            </p>
-            <span class="tag" style="background-color: blue"> #society# </span>
-          </li>
-        </ul>
-        <p>Built by Adviti Mishra</p>
-      </section>
-    </main>
+        <section>
+          <ul>
+            <li class="fact">
+              <p>
+                React is being developed by Meta (formerly facebook)
+                <a href="https://opensource.fb.com/" target="_blank">
+                  (Source)
+                </a>
+              </p>
+              <span class="tag" style="background-color: red">
+                #technology#
+              </span>
+            </li>
+            <li class="fact">
+              <p>
+                Millennial dads spend 3 times as much time with their kids than
+                their fathers spent with them. In 1982, 43% of fathers had never
+                changed a diaper. Today, that number is down to 3%
+                <a
+                  href="https://www.mother.ly/parenting/millennial-dads-spend-more-time-with-their-kids"
+                  target="_blank"
+                >
+                  (Source)
+                </a>
+              </p>
+              <span class="tag" style="background-color: blue">
+                #society#
+              </span>
+            </li>
+          </ul>
+          <p>Built by Adviti Mishra</p>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
