Added transition to hovering over link:

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           />
           <h1>Today I Learned!!</h1>
         </div>
-        <button>Share a fact</button>
+        <button class="btn">Share a fact</button>
       </header>
 
       <form class="fact-form">
@@ -42,29 +42,29 @@
           <option value="business">Business</option>
           <option value="technology">Technology</option>
         </select>
-        <button>Post</button>
+        <button class="btn">Post</button>
       </form>
 
       <main class="main">
         <aside>
           <ul>
             <li>
-              <button>All</button>
+              <button class="btn">All</button>
             </li>
             <li>
-              <button>Pop culture</button>
+              <button class="btn">Pop culture</button>
             </li>
             <li>
-              <button>History</button>
+              <button class="btn">History</button>
             </li>
             <li>
-              <button>Geography</button>
+              <button class="btn">Geography</button>
             </li>
             <li>
-              <button>Business</button>
+              <button class="btn">Business</button>
             </li>
             <li>
-              <button>Technology</button>
+              <button class="btn">Technology</button>
             </li>
           </ul>
         </aside>
