--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           />
           <h1>Today I Learned!!</h1>
         </div>
-        <button class="btn btn-large">Share a fact</button>
+        <button class="btn btn-large btn-open">Share a fact</button>
       </header>
 
       <form class="fact-form">
