--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             width="68"
             alt="Today I learned logo"
           />
-          <h1>Today I Learned!!</h1>
+          <h1>Fact Flash</h1>
         </div>
         <button class="btn btn-large btn-open">Share a fact</button>
       </header>
